--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
   <title>Chat</title>
+  <meta charset="utf-8">
 </head>
 <body>
-  <div id="app">testing</div>
+  <h1>hi</h1>
+  <div class="app"></div>
+  <script src="js/app.js"></script>
 </body>
 </html>
