Add basic user list

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       </form>
       <ul class="messages"></ul>
     </div>
+
+    <div class="loggedInContainer">
+      <h3>Logged-in Users</h3>
+      <ul class="loggedInUsers"></ul>
+    </div>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
